addons/templates/traefik/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: traefik.cis240470.projects.jetstream-cloud.org
spec:
  rules:
  - host: traefik.cis240470.projects.jetstream-cloud.org
    http:
      paths:
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: traefik-dashboard
            port:
              number: 9000
  tls:
  - hosts:
    - traefik.cis240470.projects.jetstream-cloud.org
    secretName: traefik-dashboard-cert
